--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.androidskeliton.module.main.MainFragment">
+    tools:context="com.androidskeleton.module.main.MainFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
